<resources>
    <string name="app_name">Jogingu</string>

    <string name="home">Home</string>
    <string name="target">Target</string>
    <string name="statistic">Statistic</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="warning">You need to fill in all the information </string>
    <string name="save_success">Save Success</string>

    <!--    profile-->
    <string name="title_profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="set_new_photo">Set new photo</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="city">City</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="country">Country</string>
    <string name="primary_sport">Primary sport</string>
    <string name="birthday">Birthday</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="required">* This is required</string>

    <!-- target fragment -->
    <string name="target_view_tab">Target</string>
    <string name="target_set_tab">Set target</string>
    <string name="target_content_distance">Distance / km</string>
    <string name="target_content_calo">Calo</string>
    <string name="target_content_time_start">Time start</string>
    <string name="target_content_place">Place</string>
    <string name="target_content_recurring">Recurring / days</string>
    <string name="target_content_notification_before">Notification /minutes</string>

    <!--    running activity-->
    <string name="request_permission">You need to accept location permission to use this app</string>
    <string name="title_notification_running">Run</string>
    <string name="map_access_token">AIzaSyABgcb4CSiVPAkAcBpG8lQHcC7MnC7-q0I</string>
    <string name="start">Start</string>
    <string name="resume">Resume</string>
    <string name="finish">Finish</string>


    <!-- statistic fragment -->
    <string name="statistic_content_step">Steps</string>
    <string name="statistic_content_calories">Calories</string>
    <string name="statistic_content_time">Time</string>
    <string name="statistic_content_km">Km</string>
    <string name="statistic_content_description_chart">The chart below shows your training progress over time.</string>
    <string name="statistic_content_greeting">Hi, </string>
    <string name="statistic_content_date">Today</string>
    <string name="statistic_title_fragment">Statistic</string>
    <!-- Notification -->
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>

    <string name="steps">Steps</string>
    <string name="calories">Calories</string>
    <string name="time">Time</string>
    <string name="description_chart">The chart below shows your training progress over time.</string>
    <string name="Hi">Hi, </string>
    <string name="today">Today</string>
    <string name="this_month">This month</string>
    <string name="this_week">This week</string>

    <!--    item run in home fragment-->
    <string name="morning_run">Morning Run</string>
    <string name="afternoon_run">Afternoon Run</string>
    <string name="evening_run">Evening Run</string>
    <string name="distance">Distance</string>
    <string name="avg_speed">Avg speed</string>
    <string name="total_time">Total time</string>
    <string name="save">save</string>
    <string name="update">Update</string>

    <!--    about us fragment-->
    <string name="about_jogingu">About Jogingu</string>
    <string name="about_app_description">Track your fitness with Jogingu activity tracker. Record routes, map your favourite run and analyze your training with all the stats – for free</string>
    <string name="about_us_use_smarter">3 Ways to Train Smarter with Jogingu</string>
    <string name="about_us_content_use_smarter1"> TRACK and ANALYSE: Get key stats like distance, pace, speed and calories burned.</string>
    <string name="about_us_content_use_smarter2">NEW ROUTES and MAPS: Mix up your training with the world’s largest trail network</string>
    <string name="about_us_content_use_smarter3">CHALLENGE and COMPETE: Push yourself with monthly Challenges</string>
    <string name="about_us_meet_the_team">Meet the team</string>
    <string name="about_us_title_fragment">About</string>
    <!--    <string name=""></string>-->

    <!--    developer-->
    <string name="duong">Lê Hồng Dương</string>
    <string name="dung">Trần Đăng Dũng</string>
    <string name="trang">Nguyễn Quỳnh Trang</string>
    <string name="truong">Bùi Quang Trường</string>
    <string name="no_run_to_show">No run to show</string>

    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="waiting">Waiting...</string>
<!--    auth-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="new_user">New user?</string>
    <string name="sign_in">Sign in</string>
    <string name="passwords_mismatch">Please make sure your passwords match</string>
    <string name="step">Step</string>
    <string name="speed">Speed</string>
    <string name="title_save_run_dialog">Do you want to save this run</string>
    <string name="_continue" >Continue</string>

</resources>