<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_home_24px"
        android:enabled="true"/>
    <item
        android:id="@+id/targetFragment"
        android:title="@string/target"
        android:icon="@drawable/ic_target_24px"
        android:enabled="true"/>
    <item
        android:id="@+id/run"
        android:title=""
        android:enabled="false"/>
    <item
        android:id="@+id/statisticFragment"
        android:title="@string/statistic"
        android:icon="@drawable/ic_bar_chart_24"
        android:enabled="true"/>
    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_account_24px"
        android:enabled="true"/>

</menu>