<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rectangle_conner_20dp"
    android:elevation="10dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_save_run_dialog"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgDialog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:visibility="visible"
        app:layout_constraintDimensionRatio="H,3:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        tools:src="@drawable/img_mapbox"/>

    <TextView
        android:id="@+id/txtContinue"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/_continue"
        android:textAllCaps="true"
        android:textColor="@color/main_color_normal"
        app:layout_constraintBottom_toBottomOf="@id/txtSave"
        app:layout_constraintEnd_toStartOf="@id/txtSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtSave" />

    <TextView
        android:id="@+id/txtSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:enabled="false"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/main_color_normal"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtCancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/txtContinue"
        app:layout_constraintTop_toBottomOf="@id/imgDialog" />

    <TextView
        android:id="@+id/txtCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/main_color_normal"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtSave"
        app:layout_constraintTop_toBottomOf="@id/imgDialog" />


</androidx.constraintlayout.widget.ConstraintLayout>